# BasicRustSetup

./: .gitignore  Cargo.toml  _Readme.md
src/: lib.rs  main.rs  my_random_file.rs
